# grex.js

./: .eslintrc.json  .gitignore  .npmignore  .prettierignore  .prettierrc.json  .travis.yml  LICENSE  README.md  jest.config.ts  package.json  tsconfig.json  tsconfig.webpack.json  webpack.config.ts  webpack.d.ts
.github/workflows/: codeql-analysis.yml
src/: types-native.ts  types-wasm.ts  types.ts
src/native/: index.test.ts  index.ts
src/native/native/: Cargo.toml
src/native/native/src/: lib.rs
src/wasm/browser/: index.ts
src/wasm/native/: Cargo.toml
src/wasm/native/src/: lib.rs
src/wasm/node/: index.ts
tools/: move-native-file.ts
